@@ -32,6 +32,7 @@ import Distribution.Verbosity
 import Distribution.Compat.Environment
 
 import qualified Data.Map as Map
+import System.FilePath
 import System.Exit
          ( ExitCode(..), exitWith )
 
@@ -46,6 +47,8 @@ data ProgramInvocation = ProgramInvocation {
        progInvokePath  :: FilePath,
        progInvokeArgs  :: [String],
        progInvokeEnv   :: [(String, Maybe String)],
+       -- Extra paths to add to PATH
+       progInvokePathEnv :: [FilePath],
        progInvokeCwd   :: Maybe FilePath,
        progInvokeInput :: Maybe String,
        progInvokeInputEncoding  :: IOEncoding,
@@ -61,6 +64,7 @@ emptyProgramInvocation =
     progInvokePath  = "",
     progInvokeArgs  = [],
     progInvokeEnv   = [],
+    progInvokePathEnv = [],
     progInvokeCwd   = Nothing,
     progInvokeInput = Nothing,
     progInvokeInputEncoding  = IOEncodingText,
@@ -91,6 +95,7 @@ runProgramInvocation verbosity
     progInvokePath  = path,
     progInvokeArgs  = args,
     progInvokeEnv   = [],
+    progInvokePathEnv = [],
     progInvokeCwd   = Nothing,
     progInvokeInput = Nothing
   } =
@@ -101,10 +106,12 @@ runProgramInvocation verbosity
     progInvokePath  = path,
     progInvokeArgs  = args,
     progInvokeEnv   = envOverrides,
+    progInvokePathEnv = extraPath,
     progInvokeCwd   = mcwd,
     progInvokeInput = Nothing
   } = do
-    menv <- getEffectiveEnvironment envOverrides
+    pathOverride <- getExtraPathEnv envOverrides extraPath
+    menv <- getEffectiveEnvironment (envOverrides ++ pathOverride)
     exitCode <- rawSystemIOWithEnv verbosity
                                    path args
                                    mcwd menv
@@ -117,11 +124,13 @@ runProgramInvocation verbosity
     progInvokePath  = path,
     progInvokeArgs  = args,
     progInvokeEnv   = envOverrides,
+    progInvokePathEnv = extraPath,
     progInvokeCwd   = mcwd,
     progInvokeInput = Just inputStr,
     progInvokeInputEncoding = encoding
   } = do
-    menv <- getEffectiveEnvironment envOverrides
+    pathOverride <- getExtraPathEnv envOverrides extraPath
+    menv <- getEffectiveEnvironment (envOverrides ++ pathOverride)
     (_, errors, exitCode) <- rawSystemStdInOut verbosity
                                     path args
                                     mcwd menv
@@ -141,6 +150,7 @@ getProgramInvocationOutput verbosity
     progInvokePath  = path,
     progInvokeArgs  = args,
     progInvokeEnv   = envOverrides,
+    progInvokePathEnv = extraPath,
     progInvokeCwd   = mcwd,
     progInvokeInput = minputStr,
     progInvokeOutputEncoding = encoding
@@ -148,7 +158,8 @@ getProgramInvocationOutput verbosity
     let utf8 = case encoding of IOEncodingUTF8 -> True; _ -> False
         decode | utf8      = fromUTF8 . normaliseLineEndings
                | otherwise = id
-    menv <- getEffectiveEnvironment envOverrides
+    pathOverride <- getExtraPathEnv envOverrides extraPath
+    menv <- getEffectiveEnvironment (envOverrides ++ pathOverride)
     (output, errors, exitCode) <- rawSystemStdInOut verbosity
                                     path args
                                     mcwd menv
@@ -165,6 +176,18 @@ getProgramInvocationOutput verbosity
             IOEncodingText -> (inputStr, False)
             IOEncodingUTF8 -> (toUTF8 inputStr, True) -- use binary mode for utf8
 
+
+getExtraPathEnv :: [(String, Maybe String)] -> [FilePath] -> IO [(String, Maybe String)]
+getExtraPathEnv _ [] = return []
+getExtraPathEnv env extras = do
+    mb_path <- case lookup "PATH" env of
+                Just x  -> return x
+                Nothing -> lookupEnv "PATH"
+    let extra = intercalate [searchPathSeparator] extras
+        path' = case mb_path of
+                    Nothing   -> extra
+                    Just path -> extra ++ searchPathSeparator : path
+    return [("PATH", Just path')]
 
 -- | Return the current environment extended with the given overrides.
 --
