@@ -1,0 +1,5 @@
+{-# OPTIONS_GHC -F -pgmF my-custom-preprocessor #-}
+module A where
+
+a :: String
+a = "0000"
