@@ -1,0 +1,6 @@
+module Main where
+
+import A
+
+main :: IO ()
+main = putStrLn a
